Begin returning graph data when checking on your trip