@@ -9,11 +9,7 @@ import org.springframework.stereotype.Service;
 
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
-import java.util.Collections;
-import java.util.Comparator;
-import java.util.List;
-import java.util.Objects;
-import java.util.stream.Collectors;
+import java.util.*;
 
 @Service
 @RequiredArgsConstructor
@@ -33,6 +29,16 @@ public class StopTimeService {
         }
     }
 
+    private static String removeSeconds(StopTime time) {
+        String departureTimes = time.getDeparture_time();
+        String[] hrsMinsSeconds = departureTimes.split(":");
+        if (hrsMinsSeconds.length < 2) {
+            return departureTimes; //we can't split this if the length is incorrect
+        }
+        String sb = hrsMinsSeconds[0] + ":" + hrsMinsSeconds[1] + ":00";
+        return sb;
+    }
+
     public List<String> getScheduledDepartureTimesForStop(String stopName, String routeName) {
         List<Integer> stopIds = stopMapper.getStopsByName(stopName)
                 .map(Stop::getStop_id)
@@ -41,13 +47,13 @@ public class StopTimeService {
         List<Integer> tripIds = tripRepository.getTripIdsFor(routeIds);
 
         return stopTimeRepository.getStopTimes(stopIds, tripIds)
-                .map(StopTime::getDeparture_time)
+                .map(StopTimeService::removeSeconds)
                 .distinct()
                 .sorted(Comparator.comparing(StopTimeService::parseTime))
                 .toList();
     }
 
-    public List<StopTime> getStopTimesForStop(String stopName, String routeName, String departureTime) {
+    public List<StopTime> getStopTimesForStop(String stopName, String routeName, String departureTimeNoSeconds) {
         List<Integer> stopIds = stopMapper.getStopsByName(stopName)
                 .map(Stop::getStop_id)
                 .toList();
@@ -55,30 +61,38 @@ public class StopTimeService {
         List<Integer> tripIds = tripRepository.getTripIdsFor(routeIds);
 
         return stopTimeRepository.getStopTimes(stopIds, tripIds)
-                .filter(stopTime -> Objects.equals(departureTime, stopTime.getDeparture_time()))
+                .filter(stopTime -> stopTime.getDeparture_time()
+                        .startsWith(departureTimeNoSeconds))
                 .toList();
     }
 
     /**
      * Gets the ten nearest stops for a particular trip to a certain stopId, sorted by stopSequence
      *
-     * @param tripId           the tripId used to search the
+     * @param tripIds           the tripIds used to search the stopTimeRepo for
      * @param stopId
      * @param stopRangeToCheck
      * @return
      */
-    public List<Integer> getTenNearestStopsFor(int tripId, int stopId, int stopRangeToCheck) {
-        List<Integer> stopTimes = stopTimeRepository.getStopTimes(tripId)
-                .sorted(Comparator.comparing(StopTime::getStop_sequence))
-                .map(StopTime::getStop_id)
-                .collect(Collectors.toList());
-        for (int i = 0; i < stopTimes.size(); i++) {
-            if (!Objects.equals(stopTimes.get(i), stopId))
-                continue;
-            int lowerBound = Math.min(0, i - stopRangeToCheck);
-            int upperBound = Math.max(stopTimes.size() - 1, i + stopRangeToCheck);
-            return stopTimes.subList(lowerBound, upperBound);
+    public List<Integer> getTenNearestStopsFor(List<Integer> tripIds, int stopId, int stopRangeToCheck) {
+        Map<Integer, List<Integer>> tripIdMap = new HashMap<>();
+        for (Integer tripId : tripIds) {
+            var stopTimes = stopTimeRepository.getStopTimes(tripId)
+                    .sorted(Comparator.comparing(StopTime::getStop_sequence))
+                    .map(StopTime::getStop_id)
+                    .toList();
+            for (int i = 0; i < stopTimes.size(); i++) {
+                if (!Objects.equals(stopTimes.get(i), stopId))
+                    continue;
+                int lowerBound = Math.max(0, i - stopRangeToCheck);
+                int upperBound = Math.min(stopTimes.size() - 1, i + stopRangeToCheck);
+                tripIdMap.put(tripId, stopTimes.subList(lowerBound, upperBound));
+            }
         }
-        return Collections.emptyList();
+        return tripIdMap.values()
+                .stream()
+                .flatMap(Collection::stream)
+                .distinct()
+                .toList();
     }
 }
